fix(chat): gap of subtitle

--- a/src/modules/chat/components/chatList/styles/desktop.scss
+++ b/src/modules/chat/components/chatList/styles/desktop.scss
@@ -27,6 +27,10 @@
     gap: px(10);
   }
 
+  .subtitle {
+    gap: px(20)
+  }
+
   .info {
     gap: px(4);
   }
